Major changes to overall structure. Some logical errors present and refactoring still needing to be done.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 4.2.3)
-project(SDN VERSION 0.0.1 LANGUAGES C CXX)
+project(EBF VERSION 0.0.1 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(SDN
+add_executable(EBF
   ${CMAKE_SOURCE_DIR}/src/main.cpp
   ${CMAKE_SOURCE_DIR}/src/Lexer.cpp
   ${CMAKE_SOURCE_DIR}/src/Utils.cpp
+  ${CMAKE_SOURCE_DIR}/src/Parser.cpp
 )
 
-target_include_directories(SDN
+target_include_directories(EBF
   PRIVATE
   ${CMAKE_SOURCE_DIR}/src/includes
 )
